fix jobcards space and horizontal scroll

--- a/src/style/components/job-show.scss
+++ b/src/style/components/job-show.scss
@@ -1,10 +1,5 @@
 .job-card{
 
-    margin:10px 0;
-
-    
-
-
     &-head{
         border-bottom:1px solid gray ;
         &-link{
@@ -17,7 +12,7 @@
             }
         }
         &-info{
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             display:flex;
             flex-direction: row;
             justify-content: space-between;
@@ -32,9 +27,9 @@
     }
 
     &-content{
-        margin:10px 0;
-        height: 85px;
-        overflow:scroll;
+        margin:1px 0;
+        height: 120px;
+        overflow-y:scroll;
     }
 
 }
